--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "expo-web-browser": "^7.0.0",
     "express": "^4.17.1",
     "firebase": "^7.2.1",
+    "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "react": "16.8.3",
     "react-dom": "16.8.3",
