--- a/app/package.json
+++ b/app/package.json
@@ -32,6 +32,7 @@
     "react-native-elements": "^1.2.6",
     "react-native-firebase": "^5.5.6",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-segmented-control-tab": "^3.4.1",
     "react-native-web": "^0.11.7",
     "react-navigation": "^3.12.0",
     "styled-components": "^4.4.0"
